[package]
name = "antigravity-route"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.13", features = ["json", "charset", "http2", "stream", "rustls", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
url = "2.5.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tokio-stream = "0.1.18"
base64 = "0.22.1"
